# LegitScript

./: .gitignore  CMakeLists.txt  README.md  shell.nix
.github/workflows/: cmake-multi-platform.yml  emscripten.yml
LegitScript/: CMakeLists.txt
LegitScript/include/: LegitExceptions.h  LegitScript.h  LegitScriptEvents.h  LegitScriptInputs.h  LegitScriptJsonApi.h  PodTypes.h  SourceAssembler.h
LegitScript/source/: IncludeGraph.h  LegitScript.cpp  LegitScriptJsonApi.cpp  RenderGraphScript.cpp  RenderGraphScript.h  ScriptParser.cpp  ScriptParser.h  SourceAssembler.cpp
LegitScript/source/AngelscriptWrapper/: angelscript-cpp.h
include/: LegitScript.h  LegitScriptCallbacks.h  LegitScriptCalls.h  LegitScriptJsonApi.h  PodTypes.h
source/: LegitScript.cpp  LegitScriptEmBindings.cpp  LegitScriptEmscriptenApi.cpp  LegitScriptJsonApi.cpp  RenderGraphScript.cpp  RenderGraphScript.h  ScriptParser.cpp  Tests.cpp
tests/: CMakeLists.txt  Tests.cpp
web/: CMakeLists.txt  LegitScriptEmscriptenApi.cpp  demo.html  demo.js  editor.js
web/dependencies/monaco-editor/min/vs/basic-languages/cpp/: cpp.js
web/dependencies/monaco-editor/min/vs/editor/: editor.main.js
